--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.3",
     "cross-fetch": "^4.0.0",
     "react": "^18.2.0",
